# mahjong

./: dune-project  mahjong.opam
lib/: dune  tiles.ml  tiles.mli
test/: dune  index.html  test_mahjong.ml
