(lang dune 3.16)

(name mahjong)

(generate_opam_files true)

(source
 (github liyishuai/mahjong))

(authors "Yishuai Li")

(maintainers "Yishuai Li")

(license MPL-2.0)


(package
 (name mahjong)
 (synopsis "Mahjong library for OCaml")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
